Sort Composer packages automatically

--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
     "config": {
         "platform": {
             "php": "5.5.9"
-        }
+        },
+        "sort-packages": true
     },
     "extra": {
         "symfony-app-dir": "app",
