--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -58,9 +58,9 @@ doctrine:
         user: '%database_user%'
         password: '%database_password%'
         charset: UTF8
-        # if using pdo_sqlite as your database driver:
-        #   1. add the path in parameters.yml
-        #     e.g. database_path: '%kernel.root_dir%/data/data.db3'
+        # If using pdo_sqlite as your database driver:
+        #   1. Add the path in parameters.yml
+        #      e.g. database_path: '%kernel.root_dir%/data/data.db3'
         #   2. Uncomment database_path in parameters.yml.dist
         #   3. Uncomment next line:
         #path: '%database_path%'
