--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -21,7 +21,7 @@ monolog:
         console:
             type: console
             process_psr_3_messages: false
-            channels: ['!event', '!doctrine', '!console']
+            channels: ['!event', '!doctrine']
         # To follow logs in real time, execute the following command:
         # `bin/console server:log -vv`
         server_log:
